src/TykeParser.py
# Generated from ./Tyke.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TykeParser ( Parser ):

    grammarFileName = "Tyke.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'def'", "'->'", "':'", 
                     "','", "'return'", "'='", "'('", "')'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'and'", "'or'", "'xor'", 
                     "'true'", "'false'", "'let'", "'mut'", "'if'", "'elif'", 
                     "'else'", "'bool'", "'package'", "';'", "'struct'", 
                     "'type'", "'while'", "'double'", "'int'", "'void'", 
                     "'+'", "'-'", "'*'", "'/'", "'**'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "EQ", "NEQ", 
                      "LT", "LTE", "GT", "GTE", "AND", "OR", "XOR", "TRUE", 
                      "FALSE", "LET", "MUT", "IF", "ELIF", "ELSE", "BOOL", 
                      "PACKAGE", "SEMICOLON", "STRUCT", "TYPE", "WHILE", 
                      "KW_DOUBLE", "KW_INT", "VOID", "ADD", "SUBTRACT", 
                      "MULTIPLY", "DIVIDE", "KW_POWER", "DOUBLE", "INTEGER", 
                      "FIELD_REF", "NAME", "STRING", "Newline", "Whitespace", 
                      "LineComment" ]

    RULE_program = 0
    RULE_package = 1
    RULE_typedef = 2
    RULE_funcdef = 3
    RULE_signature = 4
    RULE_ifStmt = 5
    RULE_elifStmt = 6
    RULE_elseStmt = 7
    RULE_conditionalStmt = 8
    RULE_fieldInit = 9
    RULE_fieldInitList = 10
    RULE_makeStructExpr = 11
    RULE_whileStmt = 12
    RULE_loopStmt = 13
    RULE_statementList = 14
    RULE_statement = 15
    RULE_returnStmt = 16
    RULE_funcCallStmt = 17
    RULE_declareAndAssignStmt = 18
    RULE_assigmentStmt = 19
    RULE_funcDefArgList = 20
    RULE_typedArgList = 21
    RULE_typedArg = 22
    RULE_varDeclare = 23
    RULE_arith_factor_op = 24
    RULE_arith_term_op = 25
    RULE_arithmetic_op = 26
    RULE_arith_atom = 27
    RULE_power = 28
    RULE_factor = 29
    RULE_term = 30
    RULE_arthimeticExpr = 31
    RULE_comparisonExpr = 32
    RULE_simpleBooleanExpression = 33
    RULE_bool_atom = 34
    RULE_andBooleanExpression = 35
    RULE_orBooleanExpression = 36
    RULE_booleanExpression = 37
    RULE_boolean_comparison_op = 38
    RULE_numeric_comparison_op = 39
    RULE_booleanLiteral = 40
    RULE_numeric = 41
    RULE_primitive = 42
    RULE_field = 43
    RULE_simpleExpression = 44
    RULE_expression = 45
    RULE_funcCall = 46
    RULE_funcCallDataList = 47
    RULE_dataList = 48
    RULE_data = 49
    RULE_returnType = 50
    RULE_varType = 51

    ruleNames =  [ "program", "package", "typedef", "funcdef", "signature", 
                   "ifStmt", "elifStmt", "elseStmt", "conditionalStmt", 
                   "fieldInit", "fieldInitList", "makeStructExpr", "whileStmt", 
                   "loopStmt", "statementList", "statement", "returnStmt", 
                   "funcCallStmt", "declareAndAssignStmt", "assigmentStmt", 
                   "funcDefArgList", "typedArgList", "typedArg", "varDeclare", 
                   "arith_factor_op", "arith_term_op", "arithmetic_op", 
                   "arith_atom", "power", "factor", "term", "arthimeticExpr", 
                   "comparisonExpr", "simpleBooleanExpression", "bool_atom", 
                   "andBooleanExpression", "orBooleanExpression", "booleanExpression", 
                   "boolean_comparison_op", "numeric_comparison_op", "booleanLiteral", 
                   "numeric", "primitive", "field", "simpleExpression", 
                   "expression", "funcCall", "funcCallDataList", "dataList", 
                   "data", "returnType", "varType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    EQ=11
    NEQ=12
    LT=13
    LTE=14
    GT=15
    GTE=16
    AND=17
    OR=18
    XOR=19
    TRUE=20
    FALSE=21
    LET=22
    MUT=23
    IF=24
    ELIF=25
    ELSE=26
    BOOL=27
    PACKAGE=28
    SEMICOLON=29
    STRUCT=30
    TYPE=31
    WHILE=32
    KW_DOUBLE=33
    KW_INT=34
    VOID=35
    ADD=36
    SUBTRACT=37
    MULTIPLY=38
    DIVIDE=39
    KW_POWER=40
    DOUBLE=41
    INTEGER=42
    FIELD_REF=43
    NAME=44
    STRING=45
    Newline=46
    Whitespace=47
    LineComment=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def package(self):
            return self.getTypedRuleContext(TykeParser.PackageContext,0)


        def typedef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TykeParser.TypedefContext)
            else:
                return self.getTypedRuleContext(TykeParser.TypedefContext,i)


        def funcdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TykeParser.FuncdefContext)
            else:
                return self.getTypedRuleContext(TykeParser.FuncdefContext,i)


        def getRuleIndex(self):
            return TykeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = TykeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.package()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TykeParser.TYPE:
                self.state = 105
                self.typedef()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 111
                self.funcdef()
                self.state = 114 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==TykeParser.T__2):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(TykeParser.PACKAGE, 0)

        def NAME(self):
            return self.getToken(TykeParser.NAME, 0)

        def SEMICOLON(self):
            return self.getToken(TykeParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TykeParser.RULE_package

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage" ):
                listener.enterPackage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage" ):
                listener.exitPackage(self)




    def package(self):

        localctx = TykeParser.PackageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_package)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(TykeParser.PACKAGE)
            self.state = 117
            self.match(TykeParser.NAME)
            self.state = 118
            self.match(TykeParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(TykeParser.TYPE, 0)

        def STRUCT(self):
            return self.getToken(TykeParser.STRUCT, 0)

        def NAME(self):
            return self.getToken(TykeParser.NAME, 0)

        def SEMICOLON(self):
            return self.getToken(TykeParser.SEMICOLON, 0)

        def typedArgList(self):
            return self.getTypedRuleContext(TykeParser.TypedArgListContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_typedef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef" ):
                listener.enterTypedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef" ):
                listener.exitTypedef(self)




    def typedef(self):

        localctx = TykeParser.TypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typedef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(TykeParser.TYPE)
            self.state = 121
            self.match(TykeParser.STRUCT)
            self.state = 122
            self.match(TykeParser.T__0)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TykeParser.NAME:
                self.state = 123
                self.typedArgList()


            self.state = 126
            self.match(TykeParser.T__1)
            self.state = 127
            self.match(TykeParser.NAME)
            self.state = 128
            self.match(TykeParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signature(self):
            return self.getTypedRuleContext(TykeParser.SignatureContext,0)


        def statementList(self):
            return self.getTypedRuleContext(TykeParser.StatementListContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = TykeParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.signature()
            self.state = 131
            self.match(TykeParser.T__0)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TykeParser.T__6) | (1 << TykeParser.LET) | (1 << TykeParser.IF) | (1 << TykeParser.WHILE) | (1 << TykeParser.NAME))) != 0):
                self.state = 132
                self.statementList()


            self.state = 135
            self.match(TykeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignatureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(TykeParser.NAME, 0)

        def funcDefArgList(self):
            return self.getTypedRuleContext(TykeParser.FuncDefArgListContext,0)


        def returnType(self):
            return self.getTypedRuleContext(TykeParser.ReturnTypeContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_signature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignature" ):
                listener.enterSignature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignature" ):
                listener.exitSignature(self)




    def signature(self):

        localctx = TykeParser.SignatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_signature)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(TykeParser.T__2)
            self.state = 138
            self.match(TykeParser.NAME)
            self.state = 139
            self.funcDefArgList()
            self.state = 140
            self.match(TykeParser.T__3)
            self.state = 141
            self.returnType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(TykeParser.IF, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(TykeParser.BooleanExpressionContext,0)


        def statementList(self):
            return self.getTypedRuleContext(TykeParser.StatementListContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = TykeParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(TykeParser.IF)
            self.state = 144
            self.booleanExpression()
            self.state = 145
            self.match(TykeParser.T__0)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TykeParser.T__6) | (1 << TykeParser.LET) | (1 << TykeParser.IF) | (1 << TykeParser.WHILE) | (1 << TykeParser.NAME))) != 0):
                self.state = 146
                self.statementList()


            self.state = 149
            self.match(TykeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(TykeParser.ELIF, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(TykeParser.BooleanExpressionContext,0)


        def statementList(self):
            return self.getTypedRuleContext(TykeParser.StatementListContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_elifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElifStmt" ):
                listener.enterElifStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElifStmt" ):
                listener.exitElifStmt(self)




    def elifStmt(self):

        localctx = TykeParser.ElifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(TykeParser.ELIF)
            self.state = 152
            self.booleanExpression()
            self.state = 153
            self.match(TykeParser.T__0)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TykeParser.T__6) | (1 << TykeParser.LET) | (1 << TykeParser.IF) | (1 << TykeParser.WHILE) | (1 << TykeParser.NAME))) != 0):
                self.state = 154
                self.statementList()


            self.state = 157
            self.match(TykeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(TykeParser.ELSE, 0)

        def statementList(self):
            return self.getTypedRuleContext(TykeParser.StatementListContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_elseStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseStmt" ):
                listener.enterElseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseStmt" ):
                listener.exitElseStmt(self)




    def elseStmt(self):

        localctx = TykeParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(TykeParser.ELSE)
            self.state = 160
            self.match(TykeParser.T__0)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TykeParser.T__6) | (1 << TykeParser.LET) | (1 << TykeParser.IF) | (1 << TykeParser.WHILE) | (1 << TykeParser.NAME))) != 0):
                self.state = 161
                self.statementList()


            self.state = 164
            self.match(TykeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(TykeParser.IfStmtContext,0)


        def elifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TykeParser.ElifStmtContext)
            else:
                return self.getTypedRuleContext(TykeParser.ElifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(TykeParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_conditionalStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalStmt" ):
                listener.enterConditionalStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalStmt" ):
                listener.exitConditionalStmt(self)




    def conditionalStmt(self):

        localctx = TykeParser.ConditionalStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditionalStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.ifStmt()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TykeParser.ELIF:
                self.state = 167
                self.elifStmt()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TykeParser.ELSE:
                self.state = 173
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldInitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(TykeParser.NAME, 0)

        def expression(self):
            return self.getTypedRuleContext(TykeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_fieldInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldInit" ):
                listener.enterFieldInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldInit" ):
                listener.exitFieldInit(self)




    def fieldInit(self):

        localctx = TykeParser.FieldInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fieldInit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(TykeParser.NAME)
            self.state = 177
            self.match(TykeParser.T__4)
            self.state = 178
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldInitListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldInit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TykeParser.FieldInitContext)
            else:
                return self.getTypedRuleContext(TykeParser.FieldInitContext,i)


        def getRuleIndex(self):
            return TykeParser.RULE_fieldInitList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldInitList" ):
                listener.enterFieldInitList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldInitList" ):
                listener.exitFieldInitList(self)




    def fieldInitList(self):

        localctx = TykeParser.FieldInitListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fieldInitList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.fieldInit()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TykeParser.T__5:
                self.state = 181
                self.match(TykeParser.T__5)
                self.state = 182
                self.fieldInit()
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MakeStructExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(TykeParser.NAME, 0)

        def fieldInitList(self):
            return self.getTypedRuleContext(TykeParser.FieldInitListContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_makeStructExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMakeStructExpr" ):
                listener.enterMakeStructExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMakeStructExpr" ):
                listener.exitMakeStructExpr(self)




    def makeStructExpr(self):

        localctx = TykeParser.MakeStructExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_makeStructExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(TykeParser.NAME)
            self.state = 189
            self.match(TykeParser.T__0)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TykeParser.NAME:
                self.state = 190
                self.fieldInitList()


            self.state = 193
            self.match(TykeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(TykeParser.WHILE, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(TykeParser.BooleanExpressionContext,0)


        def statementList(self):
            return self.getTypedRuleContext(TykeParser.StatementListContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)




    def whileStmt(self):

        localctx = TykeParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whileStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(TykeParser.WHILE)
            self.state = 196
            self.booleanExpression()
            self.state = 197
            self.match(TykeParser.T__0)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TykeParser.T__6) | (1 << TykeParser.LET) | (1 << TykeParser.IF) | (1 << TykeParser.WHILE) | (1 << TykeParser.NAME))) != 0):
                self.state = 198
                self.statementList()


            self.state = 201
            self.match(TykeParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whileStmt(self):
            return self.getTypedRuleContext(TykeParser.WhileStmtContext,0)


        def getRuleIndex(self):
            return TykeParser.RULE_loopStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStmt" ):
                listener.enterLoopStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStmt" ):
                listener.exitLoopStmt(self)




    def loopStmt(self):

        localctx = TykeParser.LoopStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_loopStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.whileStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TykeParser.StatementContext)
            else:
                return self.getTypedRuleContext(TykeParser.StatementContext,i)


        def getRuleIndex(self):
            return TykeParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)




    def statementList(self):
